--- a/README.Rmd
+++ b/README.Rmd
@@ -26,37 +26,48 @@ return("<style>
 [![CRAN status](https://www.r-pkg.org/badges/version/codexplor)](https://CRAN.R-project.org/package=codexplor)
 <!-- badges: end -->
 
-🧰🔧🔨 UNDER CONSTRUCTION 🧰🔧🔨
+🧰🔧🔨 `codexplor` is a WIP 🧰🔧🔨
 
-`codexplor` offers R functions for explore, analyze and monitor a programming project as a network of documents 🖧.
+`codexplor` offers R functions for explore, analyze and monitor a programming project, by turning it into a network of documents.
 
-> Get a standardized report with immediate insights on a given programming project, thanks to text-mining and network metrics, deep analysis & cool dataviz'. 
+>  🖧 Construct a standardized report and get immediate insights on a given programming project, thanks to text-mining and network metrics, deep analysis & cool dataviz'. 
 
-**Installation.** You can install the development version of codexplor with
+### Installation
+
+You can install the development version of codexplor with
 
 ``` r
 devtools::install_github("clement-LVD/codexplor")
 ```
 
 ### Features
-![↓ Given a programming project :](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Citations Network of internal dependencies&labelColor=black&color=green)
- 
-Get rid of :
 
-⏩ Global complexity with **network metrics & dataviz'**, such as a network of internal dependencies^[functions that are called by others functions of the project].
+**Available feature :** ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Citations Network of internal dependencies&labelColor=black&color=green)
 
-⏩ Local complexity with **text-mining** and document-level metrics (e.g., length and files readability).
+```{r table-features, echo=FALSE}
 
-**Supported programming languages :** ![.](https://img.shields.io/badge/R-green)
+features <- data.frame(Feature = c( "Network of internal dependencies" )
+           
+        , Function_1 = "⏩ Get rid of global complexity with **network metrics & dataviz'** (e.g., network of internal dependencies^[Local dependencies are functions that are called by others functions of the project])."
+          
+        , Function_2 = "⏩ Identify local complexity with **text-mining** and document-level metrics (e.g., length and files readability)."
+           )
 
-Other languages are planned^[Current list of planned supported languages is : `r paste0(collapse = ", ", names(codexplor::function_def_regex_by_language()))`]. 
+names(features) <- c("Feature", "↓ Given a programming project :", "↓ Given a precise file :")
 
-**Planned features.** 
+knitr::kable(features)
+
+```
+
+
+**Planned features :** 
 ![.](https://img.shields.io/badge/{Method}-bold?style=flat&logoColor=black&logoSize=2&label=Text-mining metrics&labelColor=grey&color=orange)
 ![.](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Reporting&labelColor=grey&color=orange)
 ![.](https://img.shields.io/badge/{Export}-bold?style=flat&logoColor=black&logoSize=2&label=Network-advanced&labelColor=grey&color=orange)
 
+**Supported programming languages :** ![.](https://img.shields.io/badge/R-green)
 
+Other languages are planned^[Current list of planned supported languages is : `r paste0(collapse = ", ", names(codexplor::function_def_regex_by_language()))`]. 
 
 ### Example : Explore a network of internal dependancies 
 
@@ -67,13 +78,18 @@ Other languages are planned^[Current list of planned supported languages is : `r
 
 2. Look an *interactive dataviz'* with `networkD3` : ![.](https://img.shields.io/badge/{Dataviz}-bold?style=flat&logoColor=black&logoSize=2&label=get_networkd3_from_igraph()&labelColor=yellow&color=black)
 
-       codexplor::get_networkd3_from_igraph(net) 
+       codexplor::get_networkd3_from_igraph(net)
+       # Return an interactive dataviz' from networkD3
        
+By default, nodes are colorized accordingly to their indegrees (number of ingoing links), revealing the local dependancies of the programming project (i.e. functions used by others files of the project). 
+
 ![.](man/figures/example_net3d_dataviz.png)
 
-By default, nodes are colorized accordingly to their indegrees (i.e. number of ingoing links), in order to reveal the local dependancies of the project (i.e. functions used by others files of the project). Hereabove, we see that the most-common local dependancy inside the tidyverse/stringr repo is `compat-types-check.R`. One of the codexplor functions actually rely on a stringr/extract.R function - codexplor functions network is truncated on the herabove picture, but the opposite is not true.
+*(codexplor functions network are truncated)*
 
-Play with the parameters reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees - the number of functions they call, in order to reveal the high-level files of the project.
+Hereabove, we see that the most-common local dependancy inside the tidyverse/stringr repo is `compat-types-check.R`. One of the `codexplor` functions actually rely on `stringr/extract.R` function , but the opposite is not true.
+
+Play with the parameters reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
 
 
 > Get rid of complexity with a broader perspective on the project !
@@ -82,14 +98,20 @@ Play with the parameters reveal others insights, e.g., you should try to color n
 
 `codexplor` offers several protocols & parameters to take care with. See the vignettes about the text-analysis protocols offered by `codexplor`, such as :
 
-- [Turning a programming project into a text-network](https://clement-lvd.github.io/codexplor/articles/vignette_get_text_network_from_project.html)
+- [Understand how codexplor will turn a programming project into a network of documents](https://clement-lvd.github.io/codexplor/articles/vignette_get_text_network_from_project.html)
 
 Or familiarize yourself with the specialized tools offered by `codexplor`, such as :
 
-- [Turn a programming project into a corpus with construct_corpus()](https://clement-lvd.github.io/codexplor/articles/construct_a_corpus.html)
-- [Turn it into an igraph object, filter and manage it with helper functions](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
+⏩ [Turn a programming project into a corpus with construct_corpus()](https://clement-lvd.github.io/codexplor/articles/construct_a_corpus.html)
 
-Depending on the languages you have to manage, you'll want to tweak the 'pattern' used for match a function definition : for now - `codexplor` only support the R programming language (other languages are planned). 
+⏩ [Turn it into an igraph object, filter and manage it with helper functions](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
+
+⏩ *Get metrics and identifying problematic patterns (e.g., cascading dependancies of func')*
+
+*WIP* [🔧🔨]
+
+### Crafting your own corpus with codexplor
+Depending on the languages you have to manage, you'll want to tweak the 'pattern' used for match a function definition, since for now `codexplor` support only the R programming language (other languages are planned). 
 
 
 
@@ -108,9 +130,6 @@ Depending on the languages you have to manage, you'll want to tweak the 'pattern
 
 
 
-⏩ *Get metrics and identifying problematic patterns (e.g., cascading dependancies of func')*
-
-Under construction [🔧🔨]
 
 <!--
 > `codexplor` help you to manage and analyze a programming project, giving you tools to figure out the big picture and to find the little wrench in the (net)work. 
