--- a/README.Rmd
+++ b/README.Rmd
@@ -137,7 +137,7 @@ knitr::kable(features)
 
 ![ ](https://img.shields.io/badge/R-green)
 
-Other languages are planned^[Current list of planned supported languages is : `r paste0(collapse = ", ", names(codexplor::function_def_regex_by_language()))`]
+Other languages are planned^[Current list of planned supported languages is : `r paste0(collapse = ", ", names(function_def_regex_by_language()))`]
 
 </div>
 
